# TuringReader

./: .gitignore  CMakeLists.txt
Parser/: Makefile  exemple.json  inter.json  turing.l  turing.y
Parser/AABB/: turing.l
Parser/AABB/tests/: test.json
Parser/BASE/: Makefile
Parser/BASE-STATE/: turing.y
Parser/BASE-STATE/tests/: test.json
Parser/BASE/tests/: test.json
Parser/tests/: inter-state.json  inter.json
TuringParser/: CMakeLists.txt  main.cpp  turing.l  turing.y
TuringParser/tests/: test.json
